# yc-scraper

./: .gitignore  pyproject.toml  yc_links_extractor.py
scrapy-project/ycombinator/spiders/: yscraper.py
