[tool.poetry]
name = "yc-scraper"
version = "0.1.0"
description = "YCombinator company director scraper"
authors = ["Alvaro Peña"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.1.0"
scrapy = "2.10.1"
selenium = "4.11.2"
tqdm = "4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
